--- a/setup.Rmd
+++ b/setup.Rmd
@@ -115,7 +115,7 @@ theme_update(
 )
 ```
 
-```{r setup, include=FALSE, cache = FALSE}
+```{r setup, include=FALSE, cache = FALSE, eval = FALSE}
 options(htmltools.dir.version = FALSE)
 BibOptions(
   check.entries = FALSE,
