--- a/Exercises/research_work_flow.rmd
+++ b/Exercises/research_work_flow.rmd
@@ -2,7 +2,9 @@
 output:
   html_document:
     code_folding: "hide"
+    number_sections: true
     toc: true
+    toc_depth: 2
     toc_float: true
     df_print: paged
 ---
